# PyMCL

./: .gitignore  README.md  launcher.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: nuitka.yml  pyinstaller.yml  tests.yml
pymcl/: actions.py  animated_widgets.py  background_widget.py  config_manager.py  console_window.py  constants.py  image_cache.py  launch_page.py  main.py  main_window.py  microsoft_auth.py  mod_browser.py  mod_manager.py  modrinth_client.py  server_status_widget.py  servers_page.py  settings_page.py  skin_manager.py  splash.py  stylesheet.py  title_bar.py  toast_manager.py  widgets.py  workers.py
pymcl/config/: settings.json
pymcl/lib/: telemetry_blocker.c  telemetry_blocker.dylib
pymcl/logger/: __init__.py  formatter.py  handlers.py  levels.py  logger.py
tests/: test_config_manager.py
